This one should be done... Adding Go Fest 2023, and Froaking Community Day. Also adding 808Asher coin, CDL Badges, and minor text fixes

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         <div class="assetGroup">
                            <div class="asset">
                               <a href="https://drive.google.com/open?id=1CElqmoft0ybL4K_KWlbpoAXyuuo87Opz&usp=drive_fs" target="_blank">
-                              <img alt="Hexagon Style Community Day Badge" src="./assets/2023/2023-08-13-community-day/HexBadge.png">
+                              <img alt="Hexagon Style Community Day Badge" src="./assets/2023/2023-08-13-community-day/Froakie_Badge_Background.png">
                               <div class="asset-label">
                                  <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
                               </div>
@@ -249,8 +249,8 @@
                         <div class="assetGroup">
 
                            <div class="asset">
-                              <a href="https://drive.google.com/drive/folders/1eWmIJS_ou2nQYbiPCETOmp3U6E_iuw1k?usp=drive_link" target="_blank">
-                              <img  alt="Poliwag Community Day Hexagon Badge" src="./assets/2023/2023-07-09-community-day-classic/OnlyBadge.png">
+                              <a href="https://drive.google.com/open?id=1eWmIJS_ou2nQYbiPCETOmp3U6E_iuw1k&usp=drive_fs" target="_blank">
+                              <img  alt="Poliwag Community Day Hexagon Badge" src="./assets/2023/2023-07-30-community-day/HexBadge.png">
                               <div class="asset-label">
                                  <img src="./img/gdrive-folder-icon.png" alt="Drive Folder Label">
                               </div>
@@ -266,20 +266,20 @@
                               </p>
                            </div>
                            <div class="asset">
-                              <a href="https://www.printables.com/model/504670-squirtle-community-day-classic-coin" target="_blank">
-                              <img src="./assets/2023/2023-07-09-community-day-classic/Slicer Preview.png">
+                              <a href="https://www.printables.com/model/525391-pokemon-go-community-day-72-coin-poliwag" target="_blank">
+                              <img src="./assets/2023/2023-07-30-community-day/808asher-thumbnail.webp">
                               <div class="asset-label">
                                  <img src="https://printables.com/favicon.ico" alt="Printables Label">
                               </div>
                               <label>3D Coin</label>
                               </a>
                               <p>
-                                 by <a href="https://social.pogo.community/@forte">Forte</a>
+                                 by <a href="https://www.printables.com/@808Asher">808Asher</a>
                               </p>
                            </div>
                            <div class="asset">
-                              <a href="https://drive.google.com/drive/folders/1EyEBWqXbUG9FtDGmCRTPbpA8o8x4N8i7?usp=sharing" target="_blank">
-                              <img src="./assets/2023/2023-07-09-community-day-classic/Stack.png">
+                              <a href="https://drive.google.com/open?id=1IhIoe4Xnxnz--avVUSSJJtEHNumI0NDQ&usp=drive_fs" target="_blank">
+                              <img src="./assets/2023/2023-07-30-community-day/GymBadge-stack.png">
                               <div class="asset-label">
                                  <img src="./img/gdrive-folder-icon.png" alt="Drive Folder Label">
                               </div>
@@ -321,7 +321,7 @@
                            </div>
                            
                            <div class="asset">
-                              <a href="https://drive.google.com/drive/folders/1ZMrmHvHrRvQnHM8x7lj7JroZNP5Zqr0C?usp=sharing" target="_blank">
+                              <a href="https://drive.google.com/open?id=1-9T3cY77RImz2rywEFg2Nt_KcPpCVo4y&usp=drive_fs" target="_blank">
                               <img src="./img/gdrive-folder-icon.png">
                               <div class="asset-label">
                                  <img src="./img/gdrive-folder-icon.png" alt="Drive Folder Label">
@@ -422,7 +422,7 @@
                            </div>
                            <div class="asset">
                               <a href="https://drive.google.com/open?id=1WVnO-Z-107K-pTWDbyElU1jmrK4u5tpt&usp=drive_fs" target="_blank">
-                              <img alt="Shild Style Community Day League Badge" src="./assets/2023/2023-07-09-community-day/CDL-Stack.png">
+                              <img alt="Shild Style Community Day League Badge" src="./assets/2023/2023-07-09-community-day-classic/CDL-stack.png">
                               <div class="asset-label">
                                  <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
                               </div>
