--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                            </div>
                            <div class="asset">
                               <a href="https://www.printables.com/model/400488-pokemon-go-fest-2023-keyring-model-included" target="_blank">
-                              <img alt="Go Fest 2023 Keyring Photo" src="./assets/2023/2023-gofest/ ">
+                              <img alt="Go Fest 2023 Keyring Photo" src="./assets/2023/2023-gofest/pogo_fest_2023_keyring_preview.webp">
                               <div class="asset-label">
                                  <img src="https://printables.com/favicon.ico" alt="Printables Link Label">
                               </div>
@@ -167,7 +167,7 @@
                            </div>
                            <div class="asset">
                               <a href="https://drive.google.com/file/d/1BMyKp73gjTJZP0nIXghxdAFw2PEAcX-q/view?usp=drive_link">
-                              <img alt="GO Fest 2023 Banner" src="./assets/2023/2023-gofest/ ">
+                              <img alt="GO Fest 2023 Banner" src="./assets/2023/2023-gofest/Lineart_Basic.png">
                               <div class="asset-label">
                                  <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
                               </div>
