--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                               <p>
                                  Go Fest 2023 CDL Badge! 
                                  <div class="credits">
-                                    Banner Design: xLuximityx
+                                    Badge Design: <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
                                  </div>
                               </p>
                            </div>
