--- a/index.html
+++ b/index.html
@@ -195,6 +195,18 @@
                                  </div>
                               </p>
                            </div>
+                              <div class="asset">
+                              <a href="https://drive.google.com/file/d/1fL-Kj4bBiq7MGlUjfVk54maZACNRaFqf/view?usp=drive_link" target="_blank">
+                              <img src="./assets/2023/2023-gofest/GoFest Badge.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Drive Folder Label">
+                              </div>
+                              <label>Gym Badges</label>
+                              </a>
+                              <p>
+                                 Designed to be a Discord emoji for the purpose of being used as a PokeNav badge icon by @_kaiisen in the PGCC Discord
+                              </p>
+                           </div>
                         </div>
                         <hr style="margin:25px;border-color: #555;">
                      </div>
