--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
                    </div>
                   <hr style="margin:25px;border-color: #555;">
                   <div class="text-left">
-
                      <!-- Start Charmander CCDay -->
                      <div class="asset-section" data-type="community-day">
                         <h5><a class="page-anchor" id="charmandersept2023" href="#charmandersept2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">Charmander Community Day Classic (September 2nd 2023)</span></h5>
@@ -125,7 +124,7 @@
                               </p>
                            </div>
                            <div class="asset">
-                              <a href="dropbox" target="_blank">
+                              <a href="https://www.dropbox.com/scl/fo/n0a6i4juqyrvnv15tyehd/h?rlkey=c8hvdpvfx3rdop0k7p8ahee6l&dl=0" target="_blank">
                               <img  alt="Charmander Community Day Classic Wenmdis Badges" src="./assets/2023/2023-09-02-community-day-classic/CharmanderCCD2A.png">
                               <div class="asset-label">
                                  <img src="https://cfl.dropboxstatic.com/static/images/favicon.ico" alt="Dropbox Folder Label">
