--- a/index.html
+++ b/index.html
@@ -138,13 +138,22 @@
                                  </div>
                               </p>
                            </div>
+                              <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/1SsmceeJoG57kg1jLj1tHBUPFsW7OpOKG" target="_blank">
+                              <img src="./assets/2023/2023-09-02-community-day-classic/Gold.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Drive Folder Label">
+                              </div>
+                              <label>Gym Badges</label>
+                              </a>
+                              <p>
+                                 Designed to be a Discord emoji for the purpose of being used as a PokeNav badge icon by @_kaiisen in the PGCC Discord
+                              </p>
+                           </div>
                         </div>
                         <hr style="margin:25px;border-color: #555;">
                      </div>
                      <!-- End Charmander CCDay -->
-
-
-                     
                      <!-- Start Go Fest 2023 -->
                      <div class="asset-section" data-type="special-events">
                         <h5><a class="page-anchor" id="gofest2023" href="#gofest2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">Go Fest 2023</span></h5>
