--- a/index.html
+++ b/index.html
@@ -99,6 +99,17 @@
                    </div>
                   <hr style="margin:25px;border-color: #555;">
                   <div class="text-left">
+                     <!-- Start Grubbin CDay -->
+                     <div class="asset-section" data-type="community-day">
+                        <h5><a class="page-anchor" id="grubbinsept2023" href="#grubbinsept2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">Grubbin Community Day (September 23rd 2023)</span></h5>
+                        <p>
+                           The Larva Pokémon Grubbin will be featured during the community day on the 23rd of September. Grubbin will feature more in the wild and if you are lucky, you will be able to catch a shiny version, other bonuses on the day include 3x Catch XP, 3-hour Incense, 3-hour Lures, 2x Catch Candy and more. Below you can find some artwork for you to use in your community meetups and communication channels. You can download the artwork by clicking on the applicable link, as always, we would love to see the artwork in action so please feel free to share on social media and tag us! 
+                        </p>
+                        <div class="assetGroup">
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Grubbin CDay -->
                      <!-- Start Charmander CCDay -->
                      <div class="asset-section" data-type="community-day">
                         <h5><a class="page-anchor" id="charmandersept2023" href="#charmandersept2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">Charmander Community Day Classic (September 2nd 2023)</span></h5>
