Grubbinwen-mbadges.html

--- a/index.html
+++ b/index.html
@@ -107,6 +107,21 @@
                         </p>
                         <div class="assetGroup">
                         </div>
+                              <div class="asset">
+                              <a href="https://www.dropbox.com/scl/fo/rn4hrxwp4nf5cxk35pl3b/h?rlkey=pa73pyo7l5llurhgv6pkublun&dl=0" target="_blank">
+                              <img  alt="Grubbin Community Day Classic Wen-m Badges" src="./assets/2023/2023-09-23-community-day/charjabug2A.jpg">
+                              <div class="asset-label">
+                                 <img src="https://cfl.dropboxstatic.com/static/images/favicon.ico" alt="Dropbox Folder Label">
+                              </div>
+                              <label>Wen-m Badge</label>
+                              </a>
+                              <p>
+                                 Round Badge, great for making round buttons. This links to a Dropbox folder where you can find different versions and formats.
+                                 <div class="credits">
+                                    Badge Design: Wen-m
+                                 </div>
+                              </p>
+                           </div>
                         <hr style="margin:25px;border-color: #555;">
                      </div>
                      <!-- End Grubbin CDay -->
@@ -140,12 +155,12 @@
                               <div class="asset-label">
                                  <img src="https://cfl.dropboxstatic.com/static/images/favicon.ico" alt="Dropbox Folder Label">
                               </div>
-                              <label>Wenmdis Badge</label>
+                              <label>Wen-m Badge</label>
                               </a>
                               <p>
                                  Round Badge, great for making round buttons. This links to a Dropbox folder where you can find different versions and formats.
                                  <div class="credits">
-                                    Badge Design: Wenmdis
+                                    Badge Design: Wen-m
                                  </div>
                               </p>
                            </div>
@@ -418,12 +433,12 @@
                               <div class="asset-label">
                                  <img src="./img/gdrive-folder-icon.png" alt="Drive Folder Label">
                               </div>
-                              <label>Wenmdis Badge</label>
+                              <label>Wen-m Badge</label>
                               </a>
                               <p>
                                  Round Badge, great for making round buttons.
                                  <div class="credits">
-                                    Badge Design: Wenmdis
+                                    Badge Design: Wen-m
                                  </div>
                               </p>
                            </div>
