--- a/index.html
+++ b/index.html
@@ -106,7 +106,23 @@
                            The Larva Pokémon Grubbin will be featured during the community day on the 23rd of September. Grubbin will feature more in the wild and if you are lucky, you will be able to catch a shiny version, other bonuses on the day include 3x Catch XP, 3-hour Incense, 3-hour Lures, 2x Catch Candy and more. Below you can find some artwork for you to use in your community meetups and communication channels. You can download the artwork by clicking on the applicable link, as always, we would love to see the artwork in action so please feel free to share on social media and tag us! 
                         </p>
                         <div class="assetGroup">
-                        </div>
+                              <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/1Tb7pNwjO3vEMoLw0ti6ikhP30zc3CB0E?usp=drive_link" target="_blank">
+                              <img  alt="Grubbin Community Day Hexagon Badge" src="./assets/2023/2023-09-23-community-day/Grubbin_Badge_Hex.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Drive Folder Label">
+                              </div>
+                              <label>Grubbin Hex Badges</label>
+                              </a>
+                              <p>
+                                 Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions, as well as pre-made templates for button makers. Be sure to print them at actual size with borderless printing if your printer supports it.
+                                 <div class="credits">
+                                    Badge Design: xLuximityx <br />
+                                    Base Template: Former Silph Road<br />
+                                    Pokemon Sprite: Pokémon Company
+                                 </div>
+                              </p>
+                           </div>
                               <div class="asset">
                               <a href="https://www.dropbox.com/scl/fo/rn4hrxwp4nf5cxk35pl3b/h?rlkey=pa73pyo7l5llurhgv6pkublun&dl=0" target="_blank">
                               <img  alt="Grubbin Community Day Classic Wen-m Badges" src="./assets/2023/2023-09-23-community-day/charjabug2A.jpg">
@@ -122,6 +138,7 @@
                                  </div>
                               </p>
                            </div>
+                        </div>
                         <hr style="margin:25px;border-color: #555;">
                      </div>
                      <!-- End Grubbin CDay -->
