--- a/index.html
+++ b/index.html
@@ -138,6 +138,18 @@
                                  </div>
                               </p>
                            </div>
+                              <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/13qdmjmlam2m4qLGF6c64yKoC74GqJLuI?usp=drive_link" target="_blank">
+                              <img src="./assets/2023/2023-09-23-community-day/GymBadgeGold.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Drive Folder Label">
+                              </div>
+                              <label>Gym Badges</label>
+                              </a>
+                              <p>
+                                 Designed to be a Discord emoji for the purpose of being used as a PokeNav badge icon by @_kaiisen in the PGCC Discord
+                              </p>
+                           </div>
                         </div>
                         <hr style="margin:25px;border-color: #555;">
                      </div>
