--- a/index.html
+++ b/index.html
@@ -99,6 +99,34 @@
                    </div>
                   <hr style="margin:25px;border-color: #555;">
                   <div class="text-left">
+                     <!-- Start Timburr CDay -->
+                     <div class="asset-section" data-type="community-day">
+                        <h5><a class="page-anchor" id="timburrOct23" href="#timburrOct2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">Timburr Community Day (October 15th 2023)</span></h5>
+                        <p>
+                           The muscular Pokémon Timburr will be flexing its muscles during October Community Day! Timburr will be popping up in the wild more frequently, and if you’re lucky you might just stumble upon a Shiny one! As always you can enjoy bonuses such as 3x Stardust, 3-hour Incense, 3-hour Lures, and 2x Catch Candy. Below, you'll find some artwork to create some “muscle-memories” for your meetups and communication channels. Simply click on the provided links to snag the artwork and be sure to share it across your social media and tag us!  
+                        </p>
+                        <div class="assetGroup">
+                              <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/1-Q2LjHZmXfQQdVY4Esiio7BLLsylGfZ5?usp=drive_link" target="_blank">
+                              <img  alt="Timburr Community Day Hexagon Badge" src="./assets/2023/2023-10-15-community-day/Conkeldurr_Badge.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Drive Folder Label">
+                              </div>
+                              <label>Grubbin Hex Badges</label>
+                              </a>
+                              <p>
+                                 Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions, as well as pre-made templates for button makers. Be sure to print them at actual size with borderless printing if your printer supports it.
+                                 <div class="credits">
+                                    Badge Design: xLuximityx <br />
+                                    Base Template: Former Silph Road<br />
+                                    Pokemon Sprite: Pokémon Company
+                                 </div>
+                              </p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Timburr CDay -->
                      <!-- Start Grubbin CDay -->
                      <div class="asset-section" data-type="community-day">
                         <h5><a class="page-anchor" id="grubbinsept2023" href="#grubbinsept2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">Grubbin Community Day (September 23rd 2023)</span></h5>
