--- a/index.html
+++ b/index.html
@@ -123,6 +123,21 @@
                                  </div>
                               </p>
                            </div>
+                              <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/1YVs-pzFyhPXLP8zIMQxt2p1W_NbGz5qt?usp=sharing">
+                              <img alt="Timburr CDL Badge" src="./assets/2023/2023-10-15-community-day/CDLTimburr.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Timburr CDL Badge</label>
+                              </a>
+                              <p>
+                                 Timburr CDL Badge! 
+                                 <div class="credits">
+                                    Badge Design: <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
                         </div>
                         <hr style="margin:25px;border-color: #555;">
                      </div>
