--- a/index.html
+++ b/index.html
@@ -99,6 +99,31 @@
                    </div>
                   <hr style="margin:25px;border-color: #555;">
                   <div class="text-left">
+                     <!-- Start Wooper CDay -->
+                     <div class="asset-section" data-type="community-day">
+                        <h5><a class="page-anchor" id="WooperNov23" href="#WooperNov2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">Wooper Community Day (November 5th 2023)</span></h5>
+                        <p>
+                        Get ready for an exciting November Community Day in Pokémon GO! This time, Wooper and its Paldean form will take the spotlight, with the chance to encounter Shiny versions. Enjoy great bonuses like 1/2 hatch distance, 2x Catch Candy, 3-hour Incense, and 3-hour Lures. Check out our awesome artwork for your meetups and social media channels – just click the links below. Join us for this special event, mark your calendar, and let's make it one to remember!                        </p>
+                        <div class="assetGroup">
+                              <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/1gJt32XruvTaKjCifKb6W1ThIt8TrNPly?usp=share_link">
+                              <img alt="Wooper CDL Badge" src="./assets/2023/2023-11-05-community-day/CDLWooper.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Wooper CDL Badge</label>
+                              </a>
+                              <p>
+                                 Wooper CDL Badge! 
+                                 <div class="credits">
+                                    Badge Design: <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Wooper CDay -->
                      <!-- Start Timburr CDay -->
                      <div class="asset-section" data-type="community-day">
                         <h5><a class="page-anchor" id="timburrOct23" href="#timburrOct2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">Timburr Community Day (October 15th 2023)</span></h5>
