--- a/index.html
+++ b/index.html
@@ -106,6 +106,23 @@
                         Get ready for an exciting November Community Day in Pokémon GO! This time, Wooper and its Paldean form will take the spotlight, with the chance to encounter Shiny versions. Enjoy great bonuses like 1/2 hatch distance, 2x Catch Candy, 3-hour Incense, and 3-hour Lures. Check out our awesome artwork for your meetups and social media channels – just click the links below. Join us for this special event, mark your calendar, and let's make it one to remember!                        </p>
                         <div class="assetGroup">
                               <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/18tvXTHWPkpiK-yx3zKBAcbXBvd2UjQRs?usp=share_link" target="_blank">
+                              <img  alt="Wooper Community Day Hexagon Badge" src="./assets/2023/2023-11-05-community-day/Wooper_HexBadge.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Drive Folder Label">
+                              </div>
+                              <label>Wooper Hex Badges</label>
+                              </a>
+                              <p>
+                                 Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions, as well as pre-made templates for button makers. Be sure to print them at actual size with borderless printing if your printer supports it.
+                                 <div class="credits">
+                                    Badge Design: xLuximityx <br />
+                                    Base Template: Former Silph Road<br />
+                                    Pokemon Sprite: Pokémon Company
+                                 </div>
+                              </p>
+                           </div>
+                              <div class="asset">
                               <a href="https://drive.google.com/drive/folders/1gJt32XruvTaKjCifKb6W1ThIt8TrNPly?usp=share_link">
                               <img alt="Wooper CDL Badge" src="./assets/2023/2023-11-05-community-day/CDLWooper.png">
                               <div class="asset-label">
@@ -137,7 +154,7 @@
                               <div class="asset-label">
                                  <img src="./img/gdrive-folder-icon.png" alt="Drive Folder Label">
                               </div>
-                              <label>Grubbin Hex Badges</label>
+                              <label>Timburr Hex Badges</label>
                               </a>
                               <p>
                                  Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions, as well as pre-made templates for button makers. Be sure to print them at actual size with borderless printing if your printer supports it.
