--- a/index.html
+++ b/index.html
@@ -99,6 +99,33 @@
                    </div>
                   <hr style="margin:25px;border-color: #555;">
                   <div class="text-left">
+                     <!-- Start Dec CDay -->
+                     <div class="asset-section" data-type="community-day">
+                        <h5><a class="page-anchor" id="FinalDec23" href="#FinalDec2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">December Community Day (December TBC 2023)</span></h5>
+                        <p>
+                        The highly anticipated Community Day Finale in December is on the horizon, with the exact date still pending confirmation. This special event is set to bring together all the Pokémon featured in Community Days throughout the year, promising an action-packed and exciting experience for trainers. Stay tuned for further details once the date is officially announced.                        </p>
+                        <div class="assetGroup">
+                              <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/1-WV9xyngzvTEVLEhOYsoKJbCMuAQ2c6J?usp=share_link" target="_blank">
+                              <img  alt="December Community Day Hexagon Badge" src="./assets/2023/2023-12-00-community-day/Finale_Badge.PNG">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Drive Folder Label">
+                              </div>
+                              <label>December Hex Badges</label>
+                              </a>
+                              <p>
+                                 Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions, as well as pre-made templates for button makers. Be sure to print them at actual size with borderless printing if your printer supports it.
+                                 <div class="credits">
+                                    Badge Design: xLuximityx <br />
+                                    Base Template: Former Silph Road<br />
+                                    Pokemon Sprite: Pokémon Company
+                                 </div>
+                              </p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Dec CDay -->
                      <!-- Start Wooper CDay -->
                      <div class="asset-section" data-type="community-day">
                         <h5><a class="page-anchor" id="WooperNov23" href="#WooperNov2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">Wooper Community Day (November 5th 2023)</span></h5>
@@ -107,7 +134,7 @@
                         <div class="assetGroup">
                               <div class="asset">
                               <a href="https://drive.google.com/drive/folders/18tvXTHWPkpiK-yx3zKBAcbXBvd2UjQRs?usp=share_link" target="_blank">
-                              <img  alt="Wooper Community Day Hexagon Badge" src="./assets/2023/2023-11-05-community-day/Wooper_HexBadge.png">
+                              <img  alt="Wooper Community Day Hexagon Badge" src="./assets/2023/2023-11-05-community-day/Wooper_HexBadge.PNG">
                               <div class="asset-label">
                                  <img src="./img/gdrive-folder-icon.png" alt="Drive Folder Label">
                               </div>
