--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                               <p>
                                  Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions, as well as pre-made templates for button makers. Be sure to print them at actual size with borderless printing if your printer supports it.
                                  <div class="credits">
-                                    Badge Design: xLuximityx <br />
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> <br />
                                     Base Template: Former Silph Road<br />
                                     Pokemon Sprite: Pokémon Company
                                  </div>
@@ -143,13 +143,11 @@
                               <p>
                                  Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions, as well as pre-made templates for button makers. Be sure to print them at actual size with borderless printing if your printer supports it.
                                  <div class="credits">
-                                    Badge Design: xLuximityx <br />
-                                    Base Template: Former Silph Road<br />
-                                    Pokemon Sprite: Pokémon Company
+                                    <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a><br />
                                  </div>
                               </p>
                            </div>
-                              <div class="asset">
+                           <div class="asset">
                               <a href="https://drive.google.com/drive/folders/1gJt32XruvTaKjCifKb6W1ThIt8TrNPly?usp=share_link">
                               <img alt="Wooper CDL Badge" src="./assets/2023/2023-11-05-community-day/CDLWooper.png">
                               <div class="asset-label">
@@ -161,6 +159,21 @@
                                  Wooper CDL Badge! 
                                  <div class="credits">
                                     Badge Design: <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="./assets/2023/2023-11-05-community-day/woopers_candy.png">
+                              <img alt="Woopers Candy" src="./assets/2023/2023-11-05-community-day/woopers_candy.png">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>Woopers Candy!</label>
+                              </a>
+                              <p>
+                                 Woopers Candy Graphic! 
+                                 <div class="credits">
+                                    Credit: Twobaccas
                                  </div>
                               </p>
                            </div>
@@ -186,7 +199,7 @@
                               <p>
                                  Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions, as well as pre-made templates for button makers. Be sure to print them at actual size with borderless printing if your printer supports it.
                                  <div class="credits">
-                                    Badge Design: xLuximityx <br />
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> <br />
                                     Base Template: Former Silph Road<br />
                                     Pokemon Sprite: Pokémon Company
                                  </div>
@@ -241,7 +254,7 @@
                               <p>
                                  Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions, as well as pre-made templates for button makers. Be sure to print them at actual size with borderless printing if your printer supports it.
                                  <div class="credits">
-                                    Badge Design: xLuximityx <br />
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> <br />
                                     Base Template: Former Silph Road<br />
                                     Pokemon Sprite: Pokémon Company
                                  </div>
@@ -311,7 +324,7 @@
                               <p>
                                  Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions, as well as pre-made templates for button makers. Be sure to print them at actual size with borderless printing if your printer supports it.
                                  <div class="credits">
-                                    Badge Design: xLuximityx <br />
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> <br />
                                     Base Template: Former Silph Road<br />
                                     Pokemon Sprite: Pokémon Company
                                  </div>
@@ -381,7 +394,7 @@
                               <p>
                                  Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions.
                                  <div class="credits">
-                                    Badge Design: xLuximityx <br />
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> <br />
                                     Base Template: Former Silph Road<br />
                                     Pokemon Sprite: Pokémon Company
                                  </div>
@@ -440,7 +453,7 @@
                               <p>
                                  Go Fest 2023 banner to use for your community! 
                                  <div class="credits">
-                                    Banner Design: xLuximityx
+                                    Banner Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a>
                                  </div>
                               </p>
                            </div>
@@ -493,7 +506,7 @@
                               <p>
                                  Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions, as well as pre-made templates for button makers. Be sure to print them at actual size with borderless printing if your printer supports it.
                                  <div class="credits">
-                                    Badge Design: xLuximityx <br />
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> <br />
                                     Base Template: Former Silph Road<br />
                                     Pokemon Sprite: Pokémon Company
                                  </div>
@@ -580,7 +593,7 @@
                               <p>
                                  Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions, as well as pre-made templates for button makers. Be sure to print them at actual size with borderless printing if your printer supports it.
                                  <div class="credits">
-                                    Badge Design: xLuximityx <br />
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> <br />
                                     Base Template: Former Silph Road<br />
                                     Pokemon Sprite: Pokémon Company
                                  </div>
@@ -674,7 +687,7 @@
                               <label>Badge</label>
                               </a>
                               <p>
-                                 Badge Design: xLuximityx <br />
+                                 Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> <br />
                                  Base Template: Former Silph Road<br />
                                  Blastoise Sprite: Pokémon Company
                               </p>
@@ -688,7 +701,7 @@
                               <label>Badge as Banner</label>
                               </a>
                               <p>
-                                 Badge Design: xLuximityx <br />
+                                 Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> <br />
                                  Base Template: Former Silph Road<br />
                                  Blastoise Sprite: Pokémon Company
                               </p>
@@ -780,7 +793,7 @@
                         <h6>PoGo Community Checkpoint's First Ever Asset Drop!</h6>
                         <p>
                            PoGo Community Checkpoint (PGCC) is proud to present our first asset drop! The June <a href="https://pokemongolive.com/post/communityday-june-2023-axew" target="_blank">Global Community Day</a> is
-                           featuring Axew! The Community Day badge design this month was contributed by xLuximityx (7 Pidgeys/USA)! We thank them for their contribution! If you'd like to contribute any assets to our drops check <a href="https://discord.com/channels/356458569069101058/1107742441471234118">#the-art-studio</a> channel in our <a href="https://discord.gg/ybmecaTYUN">Discord server</a>
+                           featuring Axew! The Community Day badge design this month was contributed by <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> (7 Pidgeys/USA)! We thank them for their contribution! If you'd like to contribute any assets to our drops check <a href="https://discord.com/channels/356458569069101058/1107742441471234118">#the-art-studio</a> channel in our <a href="https://discord.gg/ybmecaTYUN">Discord server</a>
                         </p>
                         <h4>
                            Credits
